chore: reformat JobAnnotation processing